-----------------------------------------------------

0.04  2017-02-03
  - Breaking change. Renaming element method 'under' to 'resource_lookup' to
    be less ambiguous. (Thanks Castaway.)

0.03  2016-06-20
  - Testing against 5.22.
  - Fixed bug when adding nested routes not honouring initial 'controller'
    namespace. (Thanks Dragoș.)

0.02  2015-05-28
  - Rebuilding distribution. Version 0.01 was broken (oops).

0.01  2015-05-28
  - Adding .travis.yml.
  - Production ready version of Mojolicious::Plugin::Restify.